--- a/FlightTracker/style.css
+++ b/FlightTracker/style.css
@@ -1,10 +1,10 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+/* Leaflet label text adjustment - centered by default */
+.labeltext { text-align: left; }
+
+/* some custom Flight Tracker styling */
 th,td
 {
-font-family:arial;color:black;font-size:14px;
+font-family:arial;color:black;font-size:12px;
 padding:3px;
 }
 h3
@@ -25,6 +25,12 @@ border-bottom: 1px dotted #000;
 text-decoration: none;
 }
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+   
+   http://www.hongkiat.com/blog/css3-image-captions/
+*/
 caption {
 	/*coordinated marking to match cell's padding*/
 	margin-bottom:.5em;
@@ -34,6 +40,11 @@ caption {
 p,fieldset {
 	/*so things don't run into each other*/
 	margin-bottom:1em;
+}
+
+#link {
+	text-decoration: none;
+	color: #000000;
 }
 
 #mainwrapper {
@@ -123,13 +134,17 @@ p,fieldset {
     left:81px;
 }
 
-/* CSS Tree menu styles */
+/* CSS Tree menu styles 
+http://www.thecssninja.com/css/css-tree-menu
+modified for Flight Tracker use
+*/
 ol.tree
 {
-	padding: 0 0 0 30px;
-	width: 245px;
+	padding: 1px 0 2px 20px;
+	width: 278px;
 	border-style: double;
-	border-width: 5px;
+	border-width: 1px;
+	font-size:14px;
 }
 	li 
 	{ 
@@ -248,7 +263,62 @@ ol.tree
 	li label
 	{
 		background: url(button_bodies.png) 15px 1px no-repeat;
-		cursor: pointer;
+		display: block;
+		padding-left: 37px;
+	}
+	
+	li labelDebris
+	{
+		background: url(button_vessel_debris.png) 15px 1px no-repeat;
+		display: block;
+		padding-left: 37px;
+	}
+
+	li labelAsteroid
+	{
+		background: url(button_vessel_asteroid.png) 15px 1px no-repeat;
+		display: block;
+		padding-left: 37px;
+	}
+
+	li labelBase
+	{
+		background: url(button_vessel_base.png) 15px 1px no-repeat;
+		display: block;
+		padding-left: 37px;
+	}
+
+	li labelLander
+	{
+		background: url(button_vessel_lander.png) 15px 1px no-repeat;
+		display: block;
+		padding-left: 37px;
+	}
+
+	li labelProbe
+	{
+		background: url(button_vessel_probe.png) 15px 1px no-repeat;
+		display: block;
+		padding-left: 37px;
+	}
+
+	li labelRover
+	{
+		background: url(button_vessel_rover.png) 15px 1px no-repeat;
+		display: block;
+		padding-left: 37px;
+	}
+
+	li labelShip
+	{
+		background: url(button_vessel_ship.png) 15px 1px no-repeat;
+		display: block;
+		padding-left: 37px;
+	}
+
+	li labelStation
+	{
+		background: url(button_vessel_station.png) 15px 1px no-repeat;
 		display: block;
 		padding-left: 37px;
 	}
